--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+
+/* NAVBER E MENU DO TOPO */
 .navbar {
   position: fixed;
   top: 0;
@@ -30,18 +32,21 @@
   color: white;
   font-size: 1.3rem;
   font-weight: bold;
-  transition: color 0.3s;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
+  padding: 10px;
 }
 
 .menu a:hover {
-  color: #00bcd4;
+  color: #18e4ff;
   border-radius: 5%;
   padding: 10px;
-  background-color: rgba(0, 0, 0, 0.149);
+  background-color: rgba(255, 255, 255, 0.200);
+  transition: 0.3s;
 }
 
+
+/* ESTILO DAS SECTIONS */
 .section {
   height: 100vh;
   display: flex;
@@ -54,24 +59,96 @@
   padding: 1rem;
 }
 
+
+/* ESTILO DA 1ª SECTION */
 .contato {
-  background-color: #4caf50;
+  background-image: url(../img/backgroundPg01.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
+.textos {
+  margin-left: -800px;
+  margin-top: 100px;
+}
+
+.nomePg01 {
+  font-size: 2.2em;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: white;
+  margin-left: -40px;
+}
+
+.sobrenomePg01 {
+  font-size: 2em;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white;
+  margin-left: 80px;
+}
+
+.paragrafoPg01 {
+  font-size: 0.3em;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  letter-spacing: 5px;
+  text-align: center;
+}
+
+.btnSobre, .btnResumo {
+  background-color: #f0f0f02c;
+    border: 1px solid #a9a9a966;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin: 30px 15px 0 15px;
+}
+
+.btnSobre a, .btnResumo a {
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  text-decoration: none;
+}
+
+.btnSobre:hover, .btnResumo:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.links img {
+  width: 25px;
+  margin: 100px auto;
+}
+
+
+/* ESTILO DA 2ª SECTION */
 .sobre {
   background-color: #2196f3;
 }
 
+
+/* ESTILO DA 3ª SECTION */
 .resumo {
   background-color: #f44336;
 }
 
-/* Rolagem suave */
+
 html {
   scroll-behavior: smooth;
 }
 
-/* Responsividade */
+
 @media (max-width: 768px) {
   .menu {
       flex-direction: column;
