--- a/style/style.css
+++ b/style/style.css
@@ -32,8 +32,14 @@
 .menu img {
   width: 40px;
   height: auto;
+  transition: 0.3s;
 }
 
+.menu img:hover{
+  width: 45px;
+  height: auto;
+  transition: 0.3s;
+}
 
 /* ESTILO DAS SECTIONS */
 .section {
@@ -50,12 +56,13 @@
 
 
 /* ESTILO DA 1ª SECTION */
-.contato {
+.home {
   background-image: url(../img/backgroundPg01.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
+
 
 .textos {
   margin-left: -800px;
@@ -70,7 +77,7 @@
 }
 
 .sobrenomePg01 {
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
   color: white;
@@ -79,13 +86,13 @@
 }
 
 .paragrafoPg01 {
-  font-size: 0.3em;
+  font-size: 0.4em;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   letter-spacing: 5px;
   text-align: center;
 }
 
-.btnSobre, .btnResumo {
+.btnSkills {
   background-color: #f0f0f02c;
     border: 1px solid #a9a9a966;
     border-radius: 5px;
@@ -94,16 +101,16 @@
     font-size: 20px;
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin: 30px 15px 0 15px;
+    margin: 40px 15px 0 15px;
 }
 
-.btnSobre a, .btnResumo a {
+.btnSkills a{
   color: white;
   font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
 }
 
-.btnSobre:hover, .btnResumo:hover {
+.btnSkills:hover{
   transform: scale(1.1);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
@@ -117,51 +124,47 @@
 
 .links img {
   width: 25px;
-  margin: 100px auto;
+  margin: 40px auto;
 }
 
 
 /* ESTILO DA 2ª SECTION */
-.sobre {
-  background-image: url(../img/backgroundPg02.jpg);
+.skills {
+  background-image: url(../img/backgroundPg02.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-#sobre {
+#skills {
   height: 100vh;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: right;
   font-family: Arial, sans-serif;
   font-size: 2rem;
   color: white;
-  text-align: center;
+  text-align: unset;
   padding: 1rem;
 }
 
-.conteudoPg02 {
-  border-radius: 20px;
-  width: 500px;
-  height: 450px;
-  background-color: rgba(89, 89, 89, 0.50);
-  padding: 10px;
-}
-
-.paragrafoPg02 {
-  font-size: 0.4em;
-  text-align: left;
-  letter-spacing: 1px;
+.paragrafo {
+  width: 220px;
+  height: 100px;
+  margin-right: 100px;
+  margin-bottom: 160px;
   font-family: 'Courier New', Courier, monospace;
 }
 
-.imgProgramador img {
-  width: 300px;
-  height: auto;
+.paragrafo p {
+  font-size: 0.50em;
+}
+
+.paragrafo span {
+  text-align: right;
 }
 
 
+/* ROLAGEM / MEDIA */
 html {
   scroll-behavior: smooth;
 }
